k8s-dp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-api-ingress
spec:
  ingressClassName: kong-k8s
  rules:
  - host: api.internal.boss.com
    http:
      paths:
      - path: /svc1
        pathType: Prefix
        backend:
          service:
            name: k8s-api-svc-1
            port:
              number: 80
      - path: /svc2
        pathType: Prefix
        backend:
          service:
            name: k8s-api-svc-2
            port:
              number: 80
